# rust-demos

./: Cargo.toml  README.md  foo2.txt
data/: cats.db  hello.txt  log_config.yml
src/: Default_trait_demos.rs  bar.rs  borrow_demos.rs  box_demo.rs  change_struct_field.rs  closures_demo.rs  color_string.rs  droppable.rs  feature_demos.rs  foo.rs  front.rs  integer_demos.rs  iter_demo.rs  lib.rs  lifetime_demos.rs  main.rs  option_demo.rs  pair_demos.rs  person.rs  rc_demo.rs  spawn_demo.rs  string_demo.rs  struct_demo.rs  struct_demo2.rs  tokio_demos.rs  tokio_write_demos.rs
src/algorithms/src/: ZigTranform.rs  binary_tree.rs  climb_stairs.rs  count_consistent_strings.rs  count_sub_islands.rs  find_complement.rs  find_kth_largest.rs  generate_parenthesis.rs  get_lucky.rs  is_palindrome.rs  is_palindrome_number.rs  is_power_of_two.rs  judge_SquareSum.rs  main.rs  (+11 more)
src/cmd_demos/: Cargo.toml
src/collection_demos/: Cargo.toml
src/compile_with_c/: Cargo.toml  build.rs
src/compile_with_cpp/: Cargo.toml  build.rs
src/demo1/: Cargo.toml  build.rs
src/demo1/src/: Map_demos.rs  aa.rs  array_demo.rs  async_demo.rs  bar.c  bb.rs  c_demo.rs  clap_demo1.rs  const_fn.rs  copy_demo.rs  custom_print.rs  dog_cat.rs  drop_demo.rs  expression.rs  extend_method.rs  float_demo.rs  format_demo.rs  hex_demos.rs  int_convert.rs  list.rs  listnode.rs  loop_demo.rs  ls.rs  macros_demo.rs  main.rs  multiply.c  player.rs  point.rs  pwd.rs  race.rs  str_demos.rs  trait_demo.rs
src/dna/: Cargo.toml
src/file_test/: Cargo.toml
src/front/: async_demos.rs  host.rs  uuid_demo.rs
src/hash_map_demos/: Cargo.toml
src/serde_demo/: Cargo.toml
src/sqlite/: Cargo.toml
src/time_demos/: Cargo.toml
src/vec_demos/: Cargo.toml
(+31 files in other folders)
