[package]
name = "demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
futures = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
log = "0.4.21"
log4rs = "1.3.0"

[build-dependencies]
cc = "1.0"